--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   },
   "homepage": "https://github.com/patrickmcclain/image-detection#readme",
   "dependencies": {
-    "aws-sdk": "^2.1092.0",
+    "@aws-sdk/client-rekognition": "^3.54.0",
+    "@aws-sdk/client-s3": "^3.32.0",
+    "@types/express": "^4.17.13",
+    "@types/formidable": "^2.0.4",
+    "axios": "^0.26.1",
     "express": "^4.17.3",
     "formidable": "^2.0.1",
-    "reload": "^3.2.0"
+    "pg": "^8.7.3",
+    "reload": "^3.2.0",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
@@ -26,7 +32,7 @@
     "typescript": "^4.6.2"
   },
   "scripts": {
-    "start": "nodemon app.ts",
+    "start": "nodemon ./src/app.ts",
     "build": "tsc"
   }
 }
