4: finishing up base functionality

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^0.26.1",
     "express": "^4.17.3",
     "formidable": "^2.0.1",
-    "pg": "^8.7.3",
+    "pg-promise": "^10.11.1",
     "reload": "^3.2.0",
     "tmp": "^0.2.1"
   },
