--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.4",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "formidable": "^2.0.1",
+    "jsdoc": "^3.6.10",
     "pg-promise": "^10.11.1",
     "reload": "^3.2.0",
     "tmp": "^0.2.1"
